<resources>
    <string name="app_name">feature</string>
    <string name="search_for_cheap_flights">Поиск дешевых авиабилетов</string>
    <string name="city_from">Откуда - Москва</string>
    <string name="city_to">Куда - Турция</string>
    <string name="fly_away_musically">Музыкально отлететь</string>
    <string name="die_antwoord">Die Antwoord</string>
    <string name="city">Будапешт</string>
    <string name="price">от 22 264 ₽ </string>
    <string name="difficult_route">Сложный маршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="weekend">Выходные</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="popular_destination">Популярное направление</string>
    <string name="istanbul">Стамбул</string>
    <string name="sochi">Сочи</string>
    <string name="phuket">Пхукет</string>
    <string name="back">обратно</string>
    <string name="date">24 фев, сб</string>
    <string name="people">1,эконом</string>
    <string name="filter">фильтр</string>
    <string name="filter_caps">Фильтр</string>
    <string name="straight_rails">Прямые рельсы</string>
    <string name="show_all">Показать все</string>
    <string name="text_about_flight">Уральские авиалинии</string>
    <string name="time">07:00  09:10   10:00  11:00  12:00  13:00  12:00      </string>
    <string name="price_flight">%s ₽</string>
    <string name="view_all_tickets">Посмотреть все билеты</string>
    <string name="string_date">%d %s,%s</string>
    <string name="departure_date">%d %s</string>
    <string name="path">%s-%s</string>
    <string name="info_about_flight">%s, 1 пассажир</string>
    <string name="the_most_comfortable">Самый удобный</string>
    <string name="departure_time">03:15</string>
    <string name="departure_airport">VKO</string>
    <string name="info_about_time">%sч в пути %s</string>
    <string name="info_about_transfer">/ Без пересадок</string>
    <string name="price_chart">График цен</string>
</resources>