<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/basic_black"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_offer"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundCornerImageView16"
        tools:src="@drawable/image_id_1" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:text="@string/die_antwoord" />

    <TextView
        android:id="@+id/text_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:text="@string/city" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_airplane" />


        <TextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_vertical"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="@string/price" />


    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>