<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_black"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="5dp"
        android:background="@color/basic_grey2"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="18dp"
            android:src="@drawable/icon_back_blue"
            app:layout_constraintBottom_toBottomOf="@id/text_info_about_flight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_path" />

        <TextView
            android:id="@+id/text_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:text="@string/path"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/icon_back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_info_about_flight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/sf_pro_display_regular_italic"
            android:text="@string/info_about_flight"
            android:textColor="@color/basic_grey6"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/text_path"
            app:layout_constraintTop_toBottomOf="@id/text_path" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_all_tickets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            tools:listitem="@layout/item_info_flights" />

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_blue_corner"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_filter"
            app:layout_constraintBottom_toBottomOf="@id/view_grey4"
            app:layout_constraintStart_toStartOf="@+id/view_grey4"
            app:layout_constraintTop_toTopOf="@id/view_grey4" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/sf_pro_display_regular_italic"
            android:text="@string/filter_caps"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:src="@drawable/icon_price_chart"
            app:layout_constraintBottom_toBottomOf="@id/view_grey4"
            app:layout_constraintStart_toStartOf="@+id/view_grey4"
            app:layout_constraintTop_toTopOf="@id/view_grey4" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/sf_pro_display_regular_italic"
            android:text="@string/price_chart"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>